--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
             </div>
           </div>
           <div class="task-settings"
-            task="translation,text-generation,code-completion,masked-language-modelling,summarization,automatic-speech-recognition,image-to-text,zero-shot-classification">
+            task="translation, automatic-speech-recognition, pronunciation">
             <label class="mt-2">Parameters: </label>
             <div class="row">
               <div class="task-settings col-xl-2 col-md-4 col-sm-6"
-                task="translation,text-generation,code-completion,summarization,automatic-speech-recognition,image-to-text">
+                task="translation, automatic-speech-recognition, pronunciation">
                 <div class="input-group mb-2">
                   <span class="input-group-text">Max length</span>
                   <input type="number" param-name="max_new_tokens" datatype="number" min="1"
@@ -130,7 +130,7 @@
                 </div>
               </div>
               <div class="task-settings col-xl-2 col-md-4 col-sm-6"
-                task="translation,text-generation,code-completion,summarization,automatic-speech-recognition,image-to-text">
+                task="translation, automatic-speech-recognition, pronunciation">
                 <div class="input-group mb-2" title="Number of beams">
                   <span class="input-group-text">No. beams</span>
                   <input type="number" param-name="num_beams" datatype="number" min="1" max="50"
@@ -145,7 +145,7 @@
                 </div>
               </div>
               <div class="task-settings col-xl-2 col-md-4 col-sm-6"
-                task="translation,text-generation,code-completion,summarization,automatic-speech-recognition,image-to-text">
+                task="translation, automatic-speech-recognition, pronunciation">
                 <div class="input-group mb-2" title="Temperature (> 0)">
                   <span class="input-group-text">Temp.</span>
                   <input type="number" param-name="temperature" datatype="number" min="0.001" step="1"
@@ -153,7 +153,7 @@
                 </div>
               </div>
               <div class="task-settings col-xl-2 col-md-4 col-sm-6"
-                task="translation,text-generation,code-completion,summarization,automatic-speech-recognition,image-to-text">
+                task="translation, automatic-speech-recognition, pronunciation">
                 <div class="input-group mb-2">
                   <span class="input-group-text">Top K</span>
                   <input type="number" param-name="top_k" datatype="number" min="0"
@@ -161,7 +161,7 @@
                 </div>
               </div>
               <div class="task-settings col-xl-2 col-md-4 col-sm-6"
-                task="translation,text-generation,code-completion,summarization,automatic-speech-recognition,image-to-text">
+                task="translation, automatic-speech-recognition, pronunciation">
                 <div class="input-group mb-2" title="Perform multinomial sampling">
                   <label class="input-group-text" for="sample-select">Sample</label>
                   <select param-name="do_sample" datatype="bool" class="form-select generation-option"
@@ -227,8 +227,7 @@
 
             <div class="row">
 
-              <label class="mt-3"> Please read this text:</label>
-              <span style="font-weight: 600;">How old are you?</span>
+              <label class="mt-3"> Please talk anything </label>
               <div class="col-lg-6">
                 <div style="padding: 5px;">
                   <button id="start-record">Bắt đầu ghi âm</button>
